Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Removed the debian directory of this product since this product will never be
  packaged on its own as a Debian package.
- i18n: added missing translations for fr & en
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- Fixed translation files through the CPSI18n/bin/fix_pos script.
- Added absolute url to the photo popup call so that it works from a box 
  (where the context is not the image itself)
- related to #297 : do not loose file title on the attached file widget when a
  new file is loaded
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- The secure module importer ('modules') is available in the expression
  context of field, widget and layout expressions.
- Added unit tests for CPSDateTime widget