@@ -1,5 +1,7 @@
-# (C) Copyright 2003 Nuxeo SARL <http://nuxeo.com>
-# Author: Florent Guillaume <fg@nuxeo.com>
+# (C) Copyright 2003-2005 Nuxeo SARL <http://nuxeo.com>
+# Authors:
+# Florent Guillaume <fg@nuxeo.com>
+# M.-A. Darche <madarche@nuxeo.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 2 as published
@@ -162,6 +164,10 @@ class CPSTextWidget(CPSStringWidget):
                                % (render_method, self.getId()))
         widget_id = self.getWidgetId()
         value = datastructure[widget_id]
+        # Associating the widget label with an input area to improve the widget
+        # accessibility.
+        input_area_id = self.getHtmlWidgetId()
+        self.setInputAreaId(input_area_id)
         rposition = datastructure[widget_id + '_rposition']
         rformat = datastructure[widget_id + '_rformat']
         if mode == 'view':
